--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,32 @@
             </div>
         </div>
     </div>
+    <div class="feedback">
+        <h2 class="feedback__header">Заинтересовались?</h2>
+        <p class="feedback__text">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <a href="#" class="feedback__find-hotel">Найти гостиницу</a>
+    </div>
+    <div class="map">
+        <img src="img/map-mobile.jpg" alt="Карта" class="map__image">
+    </div>
+    <footer class="page-footer">
+        <b class="page-footer__hashtag">#visitsedona</b>
+        <ul class="socials">
+            <li class="sicials__item">
+                <a href="#" class="socials__link  socials__link--twitter">Twitter</a>
+            </li>
+            <li class="sicials__item">
+                <a href="#" class="socials__link  socials__link--facebook">Facebook</a>
+            </li>
+            <li class="sicials__item">
+                <a href="#" class="socials__link  socials__link--youtube">Youtube</a>
+            </li>
+        </ul>
+        <div class="developed">
+            <span class="developed__text">Разработано</span>
+            <a href="https://htmlacademy.ru" class="developed__link">HTML Academy</a>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
