--- a/src/index.html
+++ b/src/index.html
@@ -42,61 +42,61 @@
     </header>
     <div class="reasons  reasons--main">
         <div class="reason">
-            <div class="reason__text  reason__text--main">
-                <b class="reason__header">Настоящий городок</b>
-                <div class="reason__num">— №1 —</div>
-                <div class="reason__description">Седона не атракцион для туристов, там течет своя жизнь</div>
-            </div>
+            <section class="reason__text  reason__text--main">
+                <h2 class="reason__header">Настоящий городок</h2>
+                <p class="reason__num">— №1 —</p>
+                <p class="reason__description">Седона не атракцион для туристов, там течет своя жизнь</p>
+            </section>
             <div class="reason__image-container">
                 <img class="reason__image" src="img/photo-city-mobile.jpg" alt="Фото города" width="320" height="260">
             </div>
             <ul class="advantages">
                 <li class="advantages__item  advantages__item--lodging">
-                    <b class="advantages__header">Жилье</b>
+                    <h2 class="advantages__header">Жилье</h2>
                     <div class="advantages__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
                 </li>
                 <li class="advantages__item  advantages__item--souvenirs">
-                    <b class="advantages__header">Сувениры</b>
+                    <h2 class="advantages__header">Сувениры</h2>
                     <div class="advantages__text">Не только китайского, но и местного производства!</div>
                 </li>
                 <li class="advantages__item  advantages__item--food">
-                    <b class="advantages__header">Еда</b>
+                    <h2 class="advantages__header">Еда</h2>
                     <div class="advantages__text">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</div>
                 </li>
             </ul>
         </div>
         <div class="reason">
-            <div class="reason__text  reason__text--main">
-                <b class="reason__header">Там есть мост дьявола</b>
-                <div class="reason__num">— №2 —</div>
-                <div class="reason__description">Да, по нему можно пройти! Если конечно вы осмелитесь</div>
-            </div>
+            <section class="reason__text  reason__text--main">
+                <h2 class="reason__header">Там есть мост дьявола</h2>
+                <p class="reason__num">— №2 —</p>
+                <p class="reason__description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+            </section>
             <div class="reason__image-container">
                 <img class="reason__image" src="img/photo-bridge-mobile.jpg" alt="Мост Дьявола">
             </div>
         </div>
         <div class="reasons reasons--other">
             <div class="reason">
-                <div class="reason__text  reason__text--other">
-                    <b class="reason__header">Небольшая площадь</b>
-                    <div class="reason__num">— №3 —</div>
-                    <div class="reason__description">Все достопримечательности находятся очень близко</div>
-                </div>
+                <section class="reason__text  reason__text--other">
+                    <h2 class="reason__header">Небольшая площадь</h2>
+                    <p class="reason__num">— №3 —</p>
+                    <p class="reason__description">Все достопримечательности находятся очень близко</p>
+                </section>
             </div>
             <div class="reason">
-                <div class="reason__text  reason__text--other">
-                    <b class="reason__header">Красивая дорога</b>
-                    <div class="reason__num">— №4 —</div>
-                    <div class="reason__description">Ехать в седону из Лас-Вегаса совсем не скучно!</div>
-                </div>
+                <section class="reason__text  reason__text--other">
+                    <h2 class="reason__header">Красивая дорога</h2>
+                    <p class="reason__num">— №4 —</p>
+                    <p class="reason__description">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
+                </section>
             </div>
             <div class="reason">
-                <div class="reason__text  reason__text--other">
-                    <b class="reason__header">Мало туристов</b>
-                    <div class="reason__num">— №5 —</div>
-                    <div class="reason__description">Большинство едет в гранд каньон
-                        и толпится там</div>
-                </div>
+                <section class="reason__text  reason__text--other">
+                    <h2 class="reason__header">Мало туристов</h2>
+                    <p class="reason__num">— №5 —</p>
+                    <p class="reason__description">Большинство едет в гранд каньон
+                        и толпится там</p>
+                </section>
             </div>
         </div>
     </div>
