--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <title>Седона - главная страница</title>
@@ -15,24 +14,34 @@
             <ul class="main-menu__items">
                 <li class="main-menu__item">
                     <a class="main-menu__link  main-menu__link--active">Главная</a>
+                    <a href="#" class="main-menu__close">Закрыть</a>
                 </li>
                 <li class="main-menu__item">
                     <a href="#" class="main-menu__link">Фото и видео</a>
+                </li>
+                <li class="main-menu__item  main-menu__item--logo">
+                    <picture>
+                        <!--<source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">-->
+                        <img src="img/logo-sedona-mobile.svg" alt="City of Sedona">
+                    </picture>
+                    <a href="#" class="main-menu__open">Показать меню</a>
                 </li>
                 <li class="main-menu__item">
                     <a href="#" class="main-menu__link">Форма отзыва</a>
                 </li>
                 <li class="main-menu__item">
-                    <a href="#" class="main-menu__link">HTML academy</a>
+                    <a href="https://htmlacademy.ru/" target="_blank" class="main-menu__link">HTML academy</a>
                 </li>
             </ul>
-            <div class="main-menu__top">
-                <img src="img/logotyle-mobile.png" alt="City of Sedona">
-            </div>
         </nav>
         <div class="intro">
             <div class="intro__image-wrapper">
-                <img class="intro__image" src="img/back-mobile.jpg" alt="SEDONA">
+                <picture>
+                    <!--<source media="(min-width: 768px)" srcset="img/back-tablet.jpg">-->
+                    <!--<img class="intro__image" src="img/back-mobile.jpg" alt="SEDONA">-->
+                </picture>
+
+                <img class="intro__image" src="img/text-sedona-index.svg" alt="SEDONA">
             </div>
             <div class="intro__text">
                 <div class="intro__description">Седона — небольшой городок в Аризоне, заслуживающий большего!</div>
@@ -42,29 +51,29 @@
     </header>
     <div class="reasons  reasons--main">
         <div class="reason">
-            <section class="reason__text  reason__text--main">
+            <section class="reason__text  reason__text--main  reason__text--triangle">
                 <h2 class="reason__header">Настоящий городок</h2>
                 <p class="reason__num">— №1 —</p>
                 <p class="reason__description">Седона не атракцион для туристов, там течет своя жизнь</p>
             </section>
             <div class="reason__image-container">
-                <img class="reason__image" src="img/photo-city-mobile.jpg" alt="Фото города" width="320" height="260">
+                <img class="reason__image" src="img/photo-city-mobile.jpg" alt="Фото города">
             </div>
-            <ul class="advantages">
-                <li class="advantages__item  advantages__item--lodging">
-                    <h2 class="advantages__header">Жилье</h2>
-                    <div class="advantages__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
-                </li>
-                <li class="advantages__item  advantages__item--souvenirs">
-                    <h2 class="advantages__header">Сувениры</h2>
-                    <div class="advantages__text">Не только китайского, но и местного производства!</div>
-                </li>
-                <li class="advantages__item  advantages__item--food">
-                    <h2 class="advantages__header">Еда</h2>
-                    <div class="advantages__text">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</div>
-                </li>
-            </ul>
         </div>
+        <ul class="advantages">
+            <li class="advantages__item  advantages__item--lodging">
+                <h2 class="advantages__header">Жилье</h2>
+                <div class="advantages__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
+            </li>
+            <li class="advantages__item  advantages__item--souvenirs">
+                <h2 class="advantages__header">Сувениры</h2>
+                <div class="advantages__text">Не только китайского, но и местного производства!</div>
+            </li>
+            <li class="advantages__item  advantages__item--food">
+                <h2 class="advantages__header">Еда</h2>
+                <div class="advantages__text">Всегда заказывайте фирменный бургер, Вы НЕ разочаруетесь!</div>
+            </li>
+        </ul>
         <div class="reason">
             <section class="reason__text  reason__text--main">
                 <h2 class="reason__header">Там есть мост дьявола</h2>
@@ -111,19 +120,24 @@
     <footer class="page-footer">
         <b class="page-footer__hashtag">#visitsedona</b>
         <ul class="socials">
-            <li class="sicials__item">
+            <li class="socials__item">
                 <a href="#" class="socials__link  socials__link--twitter">Twitter</a>
             </li>
-            <li class="sicials__item">
+            <li class="socials__item">
                 <a href="#" class="socials__link  socials__link--facebook">Facebook</a>
             </li>
-            <li class="sicials__item">
+            <li class="socials__item">
                 <a href="#" class="socials__link  socials__link--youtube">Youtube</a>
             </li>
         </ul>
-        <div class="developed">
+        <div href="https://htmlacademy.ru" class="developed">
             <span class="developed__text">Разработано</span>
-            <a href="https://htmlacademy.ru" class="developed__link">HTML Academy</a>
+            <a class="developed__logo" href="https://htmlacademy.ru">
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+
+  <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
+</svg>
+            </a>
         </div>
     </footer>
 </div>
