--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
                 <li class="main-menu__item">
                     <a href="#" class="main-menu__link">Фото и видео</a>
                 </li>
-                <li class="main-menu__item  main-menu__item--logo">
+                <li class="main-menu__logo">
                     <picture>
-                        <!--<source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">-->
+                        <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
                         <img src="img/logo-sedona-mobile.svg" alt="City of Sedona">
                     </picture>
                     <a href="#" class="main-menu__open">Показать меню</a>
@@ -36,11 +36,6 @@
         </nav>
         <div class="intro">
             <div class="intro__image-wrapper">
-                <picture>
-                    <!--<source media="(min-width: 768px)" srcset="img/back-tablet.jpg">-->
-                    <!--<img class="intro__image" src="img/back-mobile.jpg" alt="SEDONA">-->
-                </picture>
-
                 <img class="intro__image" src="img/text-sedona-index.svg" alt="SEDONA">
             </div>
             <div class="intro__text">
