Свёрстана мобильная версия страницы form.html

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
                     <a href="#" class="main-menu__open">Показать меню</a>
                 </li>
                 <li class="main-menu__item">
-                    <a href="#" class="main-menu__link">Форма отзыва</a>
+                    <a href="form.html" class="main-menu__link">Форма отзыва</a>
                 </li>
                 <li class="main-menu__item">
                     <a href="https://htmlacademy.ru/" target="_blank" class="main-menu__link">HTML academy</a>
@@ -36,7 +36,7 @@
             </ul>
         </nav>
         <div class="intro">
-            <div class="intro__image-wrapper">
+            <div class="intro__image-wrapper  intro__image-wrapper--index">
                 <img class="intro__image" src="img/text-sedona-index.svg" alt="SEDONA">
             </div>
             <div class="intro__text">
