--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
             <div class="intro__image-wrapper  intro__image-wrapper--index">
                 <img class="intro__image" src="img/text-sedona-index.svg" alt="SEDONA">
             </div>
-            <div class="intro__text">
-                <div class="intro__description">Седона — небольшой городок в Аризоне, заслуживающий большего!</div>
+            <div class="intro__text  intro__text--index">
+                <div class="intro__description  intro__description--index">Седона — небольшой городок в Аризоне, заслуживающий большего!</div>
                 <div class="intro__teaser">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</div>
             </div>
         </div>
