Свёрстана мобильная версия страницы photo.html

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                     <a href="#" class="main-menu__close">Закрыть</a>
                 </li>
                 <li class="main-menu__item">
-                    <a href="#" class="main-menu__link">Фото и видео</a>
+                    <a href="photo.html" class="main-menu__link">Фото и видео</a>
                 </li>
                 <li class="main-menu__logo">
                     <picture>
@@ -25,7 +25,7 @@
                         <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
                         <img src="img/logo-sedona-mobile.svg" alt="City of Sedona">
                     </picture>
-                    <a href="#" class="main-menu__open">Показать меню</a>
+                    <a href="photo.html" class="main-menu__open">Показать меню</a>
                 </li>
                 <li class="main-menu__item">
                     <a href="form.html" class="main-menu__link">Форма отзыва</a>
