--- a/src/form.html
+++ b/src/form.html
@@ -17,7 +17,7 @@
                     <a href="#" class="main-menu__close">Закрыть</a>
                 </li>
                 <li class="main-menu__item">
-                    <a href="#" class="main-menu__link">Фото и видео</a>
+                    <a href="photo.html" class="main-menu__link">Фото и видео</a>
                 </li>
                 <li class="main-menu__logo">
                     <picture>
