Свёрстана планшетная версия страницы photo.html

--- a/src/photo.html
+++ b/src/photo.html
@@ -47,7 +47,10 @@
     </header>
     <ul class="photos">
         <li class="photo">
-            <img src="img/photo-1-mobile@1x.jpg" alt="Неродные просторы" class="photo__image">
+            <picture>
+                <source media="(min-width: 768px)" srcset="img/photo-1-tablet@1x.jpg">
+                <img src="img/photo-1-mobile@1x.jpg" alt="Неродные просторы" class="photo__image">
+            </picture>
             <div class="photo__info">
                 <div class="photo__description">
                     <span class="photo__name">Неродные просторы</span>
@@ -62,42 +65,57 @@
             </div>
         </li>
         <li class="photo">
-            <img src="img/photo-2-mobile@1x.jpg" alt="Местная растительность" class="photo__image">
-            <div class="photo__description">
-                <span class="photo__name">Местная растительность</span>
-                <span class="photo__author">Автор фото: Сергей</span>
-            </div>
-            <div class="photo__like-container">
-                <a href="#" class="photo__like-this">
-                    <img src="img/icon-like-gray.svg" alt="Мне нравится">
-                </a>
-                <span class="photo__like-count">143</span>
-            </div>
-        </li>
-        <li class="photo">
-            <img src="img/photo-3-mobile@1x.jpg" alt="Дорога на север" class="photo__image">
-            <div class="photo__description">
-                <span class="photo__name">Дорога на север</span>
-                <span class="photo__author">Автор фото: Петр</span>
-            </div>
-            <div class="photo__like-container">
-                <a href="#" class="photo__like-this">
-                    <img src="img/icon-like-gray.svg" alt="Мне нравится">
-                </a>
-                <span class="photo__like-count">96</span>
+            <picture>
+                <source media="(min-width: 768px)" srcset="img/photo-2-tablet@1x.jpg">
+                <img src="img/photo-2-mobile@1x.jpg" alt="Местная растительность" class="photo__image">
+            </picture>
+            <div class="photo__info">
+                <div class="photo__description">
+                    <span class="photo__name">Местная растительность</span>
+                    <span class="photo__author">Автор фото: Сергей</span>
+                </div>
+                <div class="photo__like-container">
+                    <a href="#" class="photo__like-this">
+                        <img src="img/icon-like-gray.svg" alt="Мне нравится">
+                    </a>
+                    <span class="photo__like-count">143</span>
+                </div>
             </div>
         </li>
         <li class="photo">
-            <img src="img/photo-4-mobile@1x.jpg" alt="Мост дьявола" class="photo__image">
-            <div class="photo__description">
-                <span class="photo__name">Мост дьявола</span>
-                <span class="photo__author">Автор фото: Антон</span>
+            <picture>
+                <source media="(min-width: 768px)" srcset="img/photo-3-tablet@1x.jpg">
+                <img src="img/photo-3-mobile@1x.jpg" alt="Дорога на север" class="photo__image">
+            </picture>
+            <div class="photo__info  photo__info--dark-bg">
+                <div class="photo__description">
+                    <span class="photo__name">Дорога на север</span>
+                    <span class="photo__author">Автор фото: Петр</span>
+                </div>
+                <div class="photo__like-container">
+                    <a href="#" class="photo__like-this">
+                        <img src="img/icon-like-gray.svg" alt="Мне нравится">
+                    </a>
+                    <span class="photo__like-count">96</span>
+                </div>
             </div>
-            <div class="photo__like-container">
-                <a href="#" class="photo__like-this">
-                    <img src="img/icon-like-gray.svg" alt="Мне нравится">
-                </a>
-                <span class="photo__like-count">254</span>
+        </li>
+        <li class="photo">
+            <picture>
+                <source media="(min-width: 768px)" srcset="img/photo-4-tablet@1x.jpg">
+                <img src="img/photo-4-mobile@1x.jpg" alt="Мост дьявола" class="photo__image">
+            </picture>
+            <div class="photo__info">
+                <div class="photo__description">
+                    <span class="photo__name">Мост дьявола</span>
+                    <span class="photo__author">Автор фото: Антон</span>
+                </div>
+                <div class="photo__like-container">
+                    <a href="#" class="photo__like-this">
+                        <img src="img/icon-like-gray.svg" alt="Мне нравится">
+                    </a>
+                    <span class="photo__like-count">254</span>
+                </div>
             </div>
         </li>
     </ul>
@@ -107,7 +125,10 @@
             <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         </div>
         <div class="video__player">
-            <img src="img/player-mobile.png" alt="Видео" class="video__image">
+            <picture>
+                <source media="(min-width: 768px)" srcset="img/player-tablet.png">
+                <img src="img/player-mobile.png" alt="Видео" class="video__image">
+            </picture>
         </div>
     </div>
     <footer class="page-footer">
