Свёрстана десктопная версия страницы photo.html

--- a/src/photo.html
+++ b/src/photo.html
@@ -48,6 +48,7 @@
     <ul class="photos">
         <li class="photo">
             <picture>
+                <source media="(min-width: 1280px)" srcset="img/photo-1-desktop@1x.jpg">
                 <source media="(min-width: 768px)" srcset="img/photo-1-tablet@1x.jpg">
                 <img src="img/photo-1-mobile@1x.jpg" alt="Неродные просторы" class="photo__image">
             </picture>
@@ -57,15 +58,14 @@
                     <span class="photo__autor">Автор фото: Борис</span>
                 </div>
                 <div class="photo__like-container">
-                    <a href="#" class="photo__like-this">
-                        <img src="img/icon-like-gray.svg" alt="Мне нравится">
-                    </a>
+                    <a href="#" class="photo__like-this">Мне нравится</a>
                     <span class="photo__like-count">1350</span>
                 </div>
             </div>
         </li>
         <li class="photo">
             <picture>
+                <source media="(min-width: 1280px)" srcset="img/photo-2-desktop@1x.jpg">
                 <source media="(min-width: 768px)" srcset="img/photo-2-tablet@1x.jpg">
                 <img src="img/photo-2-mobile@1x.jpg" alt="Местная растительность" class="photo__image">
             </picture>
@@ -75,15 +75,14 @@
                     <span class="photo__author">Автор фото: Сергей</span>
                 </div>
                 <div class="photo__like-container">
-                    <a href="#" class="photo__like-this">
-                        <img src="img/icon-like-gray.svg" alt="Мне нравится">
-                    </a>
+                    <a href="#" class="photo__like-this">Мне нравится</a>
                     <span class="photo__like-count">143</span>
                 </div>
             </div>
         </li>
         <li class="photo">
             <picture>
+                <source media="(min-width: 1280px)" srcset="img/photo-3-desktop@1x.jpg">
                 <source media="(min-width: 768px)" srcset="img/photo-3-tablet@1x.jpg">
                 <img src="img/photo-3-mobile@1x.jpg" alt="Дорога на север" class="photo__image">
             </picture>
@@ -93,15 +92,14 @@
                     <span class="photo__author">Автор фото: Петр</span>
                 </div>
                 <div class="photo__like-container">
-                    <a href="#" class="photo__like-this">
-                        <img src="img/icon-like-gray.svg" alt="Мне нравится">
-                    </a>
+                    <a href="#" class="photo__like-this">Мне нравится</a>
                     <span class="photo__like-count">96</span>
                 </div>
             </div>
         </li>
         <li class="photo">
             <picture>
+                <source media="(min-width: 1280px)" srcset="img/photo-4-desktop@1x.jpg">
                 <source media="(min-width: 768px)" srcset="img/photo-4-tablet@1x.jpg">
                 <img src="img/photo-4-mobile@1x.jpg" alt="Мост дьявола" class="photo__image">
             </picture>
@@ -111,9 +109,7 @@
                     <span class="photo__author">Автор фото: Антон</span>
                 </div>
                 <div class="photo__like-container">
-                    <a href="#" class="photo__like-this">
-                        <img src="img/icon-like-gray.svg" alt="Мне нравится">
-                    </a>
+                    <a href="#" class="photo__like-this">Мне нравится</a>
                     <span class="photo__like-count">254</span>
                 </div>
             </div>
@@ -126,6 +122,7 @@
         </div>
         <div class="video__player">
             <picture>
+                <source media="(min-width: 1280px)" srcset="img/player-desktop.png">
                 <source media="(min-width: 768px)" srcset="img/player-tablet.png">
                 <img src="img/player-mobile.png" alt="Видео" class="video__image">
             </picture>
